[package]
name = "RusT-thread"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
cortex-m = "0.5.8"        # cortex-m 核心指令集
cortex-m-semihosting = "0.5"  # 运行时与宿主机交互
cortex-m-rt = "0.6.5"     # 最小运行时，负责启动内存初始化
panic-halt = "0.2.0"      # 定义发生 panic 时采取立即停机的行为
buddy_system_allocator = { version = "0.11.0", optional = true }
good_memory_allocator = { version = "0.1.7", optional = true }


[[bin]]
name = "RusT-thread"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[features]
default = ["buddy_system_allocator", "tiny_ffs"]
good_memory_allocator = ["dep:good_memory_allocator"]
buddy_system_allocator = ["dep:buddy_system_allocator"]
tiny_ffs = []
full_ffs = []
